# recipes-school-project

./: .exampleenv  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  tailwind.config.ts  vercel.json
api/: index.py
app/: layout.tsx
app/about/: layout.tsx  page.tsx
app/admin/: layout.tsx  page.tsx
app/admin/login/: page.tsx
app/app/: layout.tsx
app/app/homepage/: page.tsx
app/app/recipe/: page.tsx
app/app/search/: page.tsx
app/repository/: client_auth_helper.tsx  repository.tsx  types.tsx
app/ui/: copyright_notice.tsx  fonts.tsx  grid_data_view.tsx  load_failure.tsx  navbar.tsx  recipe_section.tsx  recipe_view.css  rich_text.module.css  table_view.tsx
app/utils/: searchdata_to_query.ts
backend/: .env.example  pyproject.toml  recipes.py  run.sh  temp.py
backend/recipes/: aroma.txt  bagel.txt  batter.txt  beans.txt  beer.txt  biscuit.txt  bread.txt  broth.txt  burger.txt  burrito.txt  butter.txt  cake.txt  candy.txt  caramel.txt  caviar.txt  cheese.txt  chili.txt  chimichanga.txt  chocolate.txt  cider.txt  cobbler.txt  cocoa.txt  coffee.txt  file.txt
backend/recipes_backend_server/: __init__.py  app.py  db.py  db_migrations.py  dbutil.py  dtypes.py  recipes_ai.py  squeries.py  types.py
backend/recipes_backend_server/blueprints/: admin.py
frontend/recipescom/: .eslintrc.json  .exampleenv  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
recipes_backend_server/: __init__.py  __main__.py  db.py  db_migrations.py  dtypes.py  recipes_ai.py  squeries.py
(+58 files in other folders)
